--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div id="notification" class="notification"></div>
 
     <!-- Library Ethers.js untuk interaksi dengan blockchain -->
-    <script src="https://cdn.ethers.io/lib/ethers-5.7.2.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.7.2/ethers.umd.min.js"></script>
 
     <script>
         // --- Referensi Elemen DOM ---
